# Graduacion-UNAL

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  quick_random_schedule_results.json  requirements.txt  test_cycle_detection_simple.py
Graphics/: chart.py  generate_courses.py
complexity_analisys/: disjoint_sets_complexity.py  estructuras_complejidad_analisis.py  graph_complexity.py  hash_complexity.py  heap_complexity.py  queue_complexity.py  quick_random_schedule_test.py  random_schedule_complexity.py  tablas_complejidad.md
data/: academy_program.json  courses.json  courses10mil.json  coursesmil.json  materias_ejemplo.json  users.json
graduacion_unal/adapters/: academy_program_adapter.py  courses_adapter.py  history_adapter.py  user_adapter.py
graduacion_unal/api/: courses_service.py  schedule_service.py  user_service.py
graduacion_unal/gui/: app.py  resources.qrc  resources_rc.py
graduacion_unal/gui/styles/: global.css
graduacion_unal/models/: AcademyPrograms.py  Courses.py  courses_graph.py  courses_schedule.py
graduacion_unal/structures/: avl.py  disjoint_sets.py  hash.py  heap.py  queue.py
gui/: resources.qrc
gui/ui/: AñadirMateria.ui  MainWindow.ui
src/adapters/: courses_adapter.py  user_adapter.py
src/api/: courses_service.py  schedule_service.py
src/gui/: app.py  resources_rc.py
src/models/: AcademyPrograms.py  Courses.py  User.py  courses_graph.py  courses_schedule.py
src/structures/: avl.py  hash.py
test/: test_api_service.py  test_graph_loading.py  test_schedule_service.py  test_user_model.py
(+23 files in other folders)
